start post request

--- a/wwwroot/subscribe.html
+++ b/wwwroot/subscribe.html
@@ -4,7 +4,7 @@
 	<title>Simple POST Form</title>
 <body>
 	<h2>Simple POST form</h2>
-	<form action="http://localhost:8081/" method="POST">
+	<form action="http://localhost:8081/subscribe.html" method="POST" enctype="multipart/form-data">
 		<div>
 			<label for="name">Subscribe to our newsletter</label>
 			<input type="text" name="email" id="email" />
