--- a/wwwroot/simple-form.html
+++ b/wwwroot/simple-form.html
@@ -4,7 +4,7 @@
 	<title>Simple POST Form</title>
 <body>
 	<h2>Simple POST form</h2>
-	<form action="http://localhost:8081/" method="POST">
+	<form action="http://localhost:8081/simple-form.html" method="POST" enctype="multipart/form-data">
 		<div>
 			<label for="name">What is your name?</label>
 			<input type="text" name="name" id="name" />
