--- a/wwwroot/upload.html
+++ b/wwwroot/upload.html
@@ -4,7 +4,7 @@
     <title>Upload File</title>
 </head>
 <body>
-    <form action="./cgi-bin/upload.py" method="post" enctype="multipart/form-data">
+    <form action="../cgi-bin/upload.py" method="post" enctype="multipart/form-data">
         <label for="file">Choose a file:</label>
         <input type="file" id="file" name="file">
         <input type="submit" value="Upload">
