--- a/wwwroot/checkbox.html
+++ b/wwwroot/checkbox.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<form action="../cgi-bin/checkbox.py" method = "POST">
+	<form action="../cgi-bin/checkbox.py" method = "POST" enctype="multipart/form-data">
 		<input type="checkbox" name ="blue" value ="on"/> Blue
 		<input type="checkbox" name ="red" value ="on"/> Red
 		<br><br>
